labelComp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-labels
spec:
  validationFailureAction: enforce
  rules:
  - name: check-labels
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Pods must have app and environment labels."
      pattern:
        metadata:
          labels:
            app: "?*"
            environment: "?*"
